# agcr

./: .gitignore  Cargo.toml  README.md  config.toml  database.db  database.db-shm  database.db-wal  demo.html
migrations/: 20230313030328_initialize.sql
src/: main.rs
templates/: demo.liquid
