[package]
name = "agcr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0.11", features = ["json"] }
async-channel = { version = "1.8" }
liquid = { version = "0.26" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
toml = { version = "0.4" }